refactored code; updated readme

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -32,13 +32,14 @@
       "source": [
         "### Set parameters\n",
         "\n",
-        "* RUN_ID : set this to prevent overlapped saving of model and data\n",
-        "\n",
-        "* DO_MASK : Set to True if mask is to be applied while training\n",
-        "\n",
-        "* MAX_EPOCHS\n",
+        "* ROOT_DIR : Root directory for saving the trained model\n",
+        "* RUN_ID : Trained model is saved at \"{ROOT_DIR}/run_{RUN_ID}\". Change this to prevent overlapped saving of model and data.\n",
+        "* TRAIN_DATA_SIZE: No of samples to be used for training. Set to `None` to use all the samples.\n",
+        "* MAX_EPOCHS: The maximum no. of epochs for training. Set this to a very high number to train for the entire job time.\n",
         "* VAL_INTERVAL : how frequently the validation code should be run\n",
-        "* TRAIN_RATIO: proportion of total dataset to be used for training. Rest will be used for validating"
+        "* TRAIN_RATIO: proportion of total dataset to be used for training. Rest will be used for validating\n",
+        "* CONTINUE_TRAINING: Set to true to resume from previous trained model. Set to false to train from scratch.\n",
+        "* SANITY_CHECK: Set to true to do a minimal training to check for bugs before running the entire training."
       ]
     },
     {
@@ -47,12 +48,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "RUN_ID = 30\n",
-        "INPUT_MODALITY = \"ONLY_T1\"\n",
-        "QR_REGRESSION = False\n",
-        "DO_MASK = True\n",
-        "MAX_EPOCHS = 6000\n",
+        "RUN_ID = 1\n",
         "TRAIN_DATA_SIZE = 200\n",
+        "MAX_EPOCHS = 6000\n",
         "BATCHSIZE_TRAIN = 2\n",
         "VAL_INTERVAL = 10\n",
         "TRAIN_RATIO = 0.8\n",
@@ -64,24 +62,12 @@
         "SANITY_CHECK = True\n",
         "if SANITY_CHECK:\n",
         "    RUN_ID = 0\n",
-        "    MAX_EPOCHS = 10\n",
-        "    TRAIN_DATA_SIZE = 10\n",
-        "    VAL_INTERVAL = 2\n",
-        "\n",
-        "params = {\n",
-        "    'RUN_ID': RUN_ID,\n",
-        "    'INPUT_MODALITY': INPUT_MODALITY,\n",
-        "    'QR_REGRESSION': QR_REGRESSION,\n",
-        "    'DO_MASK': DO_MASK,\n",
-        "    'MAX_EPOCHS': MAX_EPOCHS,\n",
-        "    'ROOT_DIR': ROOT_DIR\n",
-        "}\n",
+        "    MAX_EPOCHS = 2\n",
+        "    TRAIN_DATA_SIZE = 6\n",
+        "    VAL_INTERVAL = 1\n",
         "\n",
         "logger.info(\"PARAMETERS\\n-----------------\")\n",
         "logger.info(f\"RUN_ID: {RUN_ID}\")\n",
-        "logger.info(f\"INPUT_MODALITY: {INPUT_MODALITY}\")\n",
-        "logger.info(f\"QR_REGRESSION: {QR_REGRESSION}\")\n",
-        "logger.info(f\"DO_MASK: {DO_MASK}\")\n",
         "logger.info(f\"MAX_EPOCHS: {MAX_EPOCHS}\")\n",
         "logger.info(f\"TRAIN_DATA_SIZE: {TRAIN_DATA_SIZE}\")\n",
         "logger.info(f\"BATCHSIZE_TRAIN: {BATCHSIZE_TRAIN}\")\n",
@@ -104,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -162,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 5,
       "metadata": {
         "id": "PeNCIs06KX7R"
       },
@@ -207,7 +193,6 @@
         "    transform = data_transform['val']\n",
         ")\n",
         "\n",
-        "# TODO: add logic to get subset inside BraTSDataset\n",
         "if TRAIN_DATA_SIZE:\n",
         "    train_dataset = Subset(train_dataset, list(range(TRAIN_DATA_SIZE)))\n",
         "    val_dataset = Subset(val_dataset, list(range(TRAIN_DATA_SIZE//4)))\n",
@@ -226,39 +211,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 23,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# # Load masks\n",
-        "# mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
-        "# train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
-        "# val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "N3e3iR-hKX7T"
       },
       "source": [
         "## Create Model, Loss, Optimizer"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "input_filter = []\n",
-        "if INPUT_MODALITY == \"ONLY_T1\":\n",
-        "    input_filter = [1]\n",
-        "elif INPUT_MODALITY == \"T1_T2\":\n",
-        "    input_filter = [1,3]\n",
-        "elif INPUT_MODALITY == \"T1_T2_FLAIR\":\n",
-        "    input_filter = [0,1,3]"
       ]
     },
     {
@@ -271,6 +229,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The model has three inputs (T1, T2, T2-FLAIR) and 1 output (T1Gd)."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -280,13 +245,13 @@
       "source": [
         "device = torch.device(\"cuda:0\")\n",
         "out_channels = 1\n",
-        "model = create_UNet3D(len(input_filter), out_channels, device)\n",
+        "model = create_UNet3D(3, out_channels, device)\n",
         "logger.debug(\"Model defined\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -320,22 +285,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from utils.loss import qr_loss, mse_loss, gaussian_nll_loss\n",
+        "from utils.loss import mse_loss\n",
         "\n",
         "def loss_scheduler(epoch):\n",
-        "    if QR_REGRESSION:\n",
-        "        return qr_loss\n",
-        "    else:\n",
-        "        return mse_loss"
+        "    return mse_loss"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 10,
       "metadata": {
         "id": "YmxkPH4GKX7T"
       },
@@ -345,17 +307,6 @@
         "\n",
         "scaler = torch.amp.GradScaler('cuda')\n",
         "torch.backends.cudnn.benchmark = True"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 29,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Save params\n",
-        "with open(os.path.join(save_dir, 'params.pkl'), 'wb') as f:\n",
-        "    pickle.dump(params, f)"
       ]
     },
     {
@@ -392,7 +343,7 @@
         "        optimizer.zero_grad()\n",
         "        with torch.amp.autocast('cuda'):\n",
         "            target = train_inputs.clone()[:, [2], ...] # T1Gd\n",
-        "            train_inputs = train_inputs[:,input_filter, ...]\n",
+        "            train_inputs = train_inputs[:,[0,1,3], ...] # contrasts other than T1Gd\n",
         "            train_outputs = model(train_inputs)\n",
         "            loss = criterion(train_outputs, target)\n",
         "        scaler.scale(loss).backward()\n",
@@ -423,7 +374,7 @@
         "                    val_data[\"id\"],\n",
         "                )\n",
         "                val_target = val_inputs.clone()[:, [2], ...] # T1Gd\n",
-        "                val_inputs = val_inputs[:,input_filter, ...]\n",
+        "                val_inputs = val_inputs[:,[0,1,3], ...] # contrasts other than T1Gd\n",
         "                val_outputs = inference(val_inputs, model)\n",
         "                mse_metric(y_pred=val_outputs, y=val_target)\n",
         "\n",
