prefixed run_id with 0 (three digits)

--- a/src/analyse_results_main.ipynb
+++ b/src/analyse_results_main.ipynb
@@ -58,9 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID}\")\n",
+    "load_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID:03d}\")\n",
     "fig_save_dir_root = os.path.join(\"..\", \"figs\")\n",
-    "fig_save_dir = os.path.join(fig_save_dir_root, \"runs\", f\"run_{RUN_ID}\")\n",
+    "fig_save_dir = os.path.join(fig_save_dir_root, \"runs\", f\"run_{RUN_ID:03d}\")\n",
     "os.makedirs(fig_save_dir, exist_ok=True)"
    ]
   },
@@ -89,7 +89,7 @@
     "    metric_values = training_info['metric_values']\n",
     "\n",
     "logger.info(\"PARAMETERS\\n-----------------\")\n",
-    "logger.info(f\"RUN_ID: {RUN_ID}\")\n",
+    "logger.info(f\"RUN_ID: {RUN_ID:03d}\")\n",
     "logger.info(f\"QR_REGRESSION: {QR_REGRESSION}\")\n",
     "logger.info(f\"ROOT_DIR: {ROOT_DIR}\")\n",
     "print(\"\")"
