--- a/src/save_results.ipynb
+++ b/src/save_results.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = os.path.join('/scratch1/sachinsa/data/contr_generated', f\"run_{RUN_ID}\")\n",
+    "save_dir = os.path.join('/scratch1/sachinsa/data/contr_generated', f\"run_{RUN_ID:03d}\")\n",
     "os.makedirs(save_dir, exist_ok=True)"
    ]
   },
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID}\")\n",
+    "load_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID:03d}\")\n",
     "checkpoint = torch.load(os.path.join(load_dir, 'best_checkpoint.pth'), weights_only=True)\n",
     "model.load_state_dict(checkpoint['model_state_dict'])\n",
     "model.eval()\n",
