--- a/src/tumseg.ipynb
+++ b/src/tumseg.ipynb
@@ -54,7 +54,7 @@
     "    VAL_INTERVAL = 1\n",
     "\n",
     "logger.info(\"PARAMETERS\\n-----------------\")\n",
-    "logger.info(f\"RUN_ID: {RUN_ID}\")\n",
+    "logger.info(f\"RUN_ID: {RUN_ID:03d}\")\n",
     "logger.info(f\"MAX_EPOCHS: {MAX_EPOCHS}\")\n",
     "logger.info(f\"TRAIN_DATA_SIZE: {TRAIN_DATA_SIZE}\")\n",
     "logger.info(f\"BATCHSIZE_TRAIN: {BATCHSIZE_TRAIN}\")\n",
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID}\")\n",
+    "save_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID:03d}\")\n",
     "if os.path.exists(save_dir) and os.path.isdir(save_dir) and len(os.listdir(save_dir)) != 0:\n",
     "    logger.warning(f\"{save_dir} already exists. Avoid overwrite by updating RUN_ID.\")\n",
     "    # exit()\n",
