scale intensity of data; renamed files;

--- a/src/analyse_results_tumseg.ipynb
+++ b/src/analyse_results_tumseg.ipynb
@@ -13,13 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 40\n",
+    "RUN_ID = 801\n",
     "T1GD_SYNTH = True\n",
-    "MASK_CODE = 0 #RUN_ID - 80\n",
+    "MASK_CODE = 0\n",
     "if T1GD_SYNTH: MASK_CODE = 0\n",
     "RANDOM_SEED = 0\n",
-    "ROOT_DIR = \"/scratch1/sachinsa/brats_seg\"\n",
-    "DATA_ROOT_DIR = \"/scratch1/sachinsa/data\""
+    "ROOT_DIR = \"/scratch1/sachinsa/brats_seg\""
    ]
   },
   {
@@ -79,22 +78,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def all_subsets(arr):\n",
-    "    subsets = list(chain.from_iterable(combinations(arr, r) for r in range(0, len(arr))))\n",
-    "    return [list(subset) for subset in subsets]\n",
-    "\n",
-    "mask_indices = all_subsets([0, 1, 2, 3])[MASK_CODE]\n",
-    "show_indices = [x for x in [0, 1, 2, 3] if x not in mask_indices]\n",
-    "channels = [\"FLAIR\", \"T1w\", \"T1Gd\", \"T2w\"]\n",
-    "label_list = [\"TC\", \"WT\", \"ET\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,18 +105,16 @@
     "metric_wt = metric_values_wt[arg_max]\n",
     "metric_et = metric_values_et[arg_max]\n",
     "\n",
-    "print(f\"Masked contrasts: {[channels[i] for i in mask_indices]}\")\n",
+    "# print(f\"Masked contrasts: {[channels[i] for i in mask_indices]}\")\n",
     "print(f\"Epochs  Total\tTC\tWT\tET\")\n",
     "print(f\"{len(epoch_loss_values)}\t{100*metric:.1f}\t{100*metric_tc:.1f}\t{100*metric_wt:.1f}\t{100*metric_et:.1f}\")\n",
-    "\n",
     "\n",
     "fig, axs = plt.subplots(1,4, figsize=(10, 3),gridspec_kw={'wspace': 0, 'hspace': 0})\n",
     "plot_donut(metric, \"Total\", \"green\", axs[0])\n",
     "plot_donut(metric_tc, \"TC\", \"blue\", axs[1])\n",
     "plot_donut(metric_wt, \"WT\", \"brown\", axs[2])\n",
     "plot_donut(metric_et, \"ET\", \"purple\", axs[3])\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()\n"
    ]
   },
   {
@@ -174,6 +155,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def all_subsets(arr):\n",
+    "    subsets = list(chain.from_iterable(combinations(arr, r) for r in range(0, len(arr))))\n",
+    "    return [list(subset) for subset in subsets]\n",
+    "\n",
+    "mask_indices = all_subsets([0, 1, 2, 3])[MASK_CODE]\n",
+    "show_indices = [x for x in [0, 1, 2, 3] if x not in mask_indices]\n",
+    "channels = [\"FLAIR\", \"T1w\", \"T1Gd\", \"T2w\"]\n",
+    "label_list = [\"TC\", \"WT\", \"ET\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -203,8 +200,6 @@
    "source": [
     "val_dataset = BraTSDataset(\n",
     "    version='2017',\n",
-    "    # load_t1gd = T1GD_SYNTH,\n",
-    "    processed = True,\n",
     "    section = 'all',\n",
     "    seed = RANDOM_SEED,\n",
     "    transform = data_transform['val']\n",
@@ -213,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,33 +252,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_ratio_of_ones(tensor):\n",
-    "    total_elements = tensor.numel()\n",
-    "    count_ones = torch.sum(tensor)\n",
-    "    ratio = count_ones.float() / total_elements\n",
-    "    return ratio.item()\n",
-    "\n",
-    "def tensor_to_sorted_tuple(tensor):\n",
-    "    unique_values, counts = torch.unique(tensor, return_counts=True)\n",
-    "    result = list(zip(unique_values.tolist(), counts.tolist()))\n",
-    "    result.sort(key=lambda x: x[1], reverse=True)\n",
-    "    return tuple(result)\n",
-    "    \n",
-    "def find_centroid_3d(tensor):\n",
-    "    print(f\"TC: {find_ratio_of_ones(tensor)*100:.5f}%\")\n",
-    "    indices = torch.nonzero(tensor, as_tuple=False)\n",
-    "\n",
-    "    print(len(indices))\n",
-    "    print(tensor_to_sorted_tuple(indices[:, 2]))\n",
-    "\n",
-    "    if indices.shape[0] == 0:\n",
-    "        shape = torch.tensor(tensor.shape, dtype=torch.float32)\n",
-    "        midpoint = (shape - 1) / 2\n",
-    "        return midpoint.round().to(torch.int64)\n",
-    "\n",
-    "    centroid = torch.mean(indices.float(), dim=0).round().to(torch.int64)\n",
-    "    return centroid\n",
-    "    \n",
     "label_centroid =  find_centroid_3d(input_label[0]) # centroid of TC (Tumor Core)\n",
     "print(label_centroid)"
    ]
@@ -299,7 +267,7 @@
     "label_list = [\"TC\", \"WT\", \"ET\", \"Combined\"]\n",
     "channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
     "\n",
-    "def plot_brain(index, label):\n",
+    "def plot_label(index, label):\n",
     "    if label == \"ground_truth\":\n",
     "        start_index = 1*len(channels)\n",
     "        brain_slice = input_label\n",
@@ -309,11 +277,12 @@
     "        brain_slice = this_output\n",
     "        title = \"Prediction\"\n",
     "\n",
-    "    brain_slice = brain_slice[..., h_index].detach().cpu().T\n",
+    "    brain_slice = brain_slice[..., h_index].detach().cpu()\n",
     "    if index < 3:\n",
-    "        brain_slice = brain_slice[..., index]\n",
+    "        brain_slice = brain_slice[index, ...]\n",
     "    else:\n",
-    "        brain_slice = brain_slice.sum(axis=-1)\n",
+    "        brain_slice = brain_slice.sum(axis=0)\n",
+    "    brain_slice = brain_slice.T\n",
     "    plt.subplot(3, 4, start_index + index + 1)\n",
     "    plt.title(label_list[index], fontsize=30)\n",
     "    if index == 0:\n",
@@ -340,9 +309,9 @@
     "    \n",
     "# plt.figure(\"label\", (18, 12))\n",
     "for i in range(len(label_list)):\n",
-    "    plot_brain(i, \"ground_truth\")\n",
+    "    plot_label(i, \"ground_truth\")\n",
     "for i in range(len(label_list)):\n",
-    "    plot_brain(i, \"prediction\")\n",
+    "    plot_label(i, \"prediction\")\n",
     "plt.suptitle(f\"BRATS_{this_input['id']} (h={h_index}/{im_height})\", y=0.9, fontsize=20)\n",
     "plt.show()"
    ]
