--- a/src/save_results.ipynb
+++ b/src/save_results.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 40 # mean t1gd\n",
+    "RUN_ID = 401\n",
     "RANDOM_SEED = 0\n",
     "ROOT_DIR = \"/scratch1/sachinsa/cont_syn\""
    ]
@@ -44,12 +44,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "save_dir = os.path.join('/scratch1/sachinsa/data/contr_generated', f\"run_{RUN_ID:03d}\")\n",
     "os.makedirs(save_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_dataset = BraTSDataset(\n",
+    "    version='2017',\n",
+    "    section='all',\n",
+    "    seed = RANDOM_SEED,\n",
+    "    transform = data_transform['val']\n",
+    ")\n",
+    "all_loader = DataLoader(all_dataset, batch_size=1, shuffle=False, num_workers=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# temp code: to save blank t1gd\n",
+    "device = torch.device(\"cuda:0\")\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for this_data in all_loader:\n",
+    "        this_inputs, this_ids = (\n",
+    "            this_data[\"image\"].to(device),\n",
+    "            this_data[\"id\"],\n",
+    "        )\n",
+    "        this_outputs = torch.cat([this_inputs[:, :2, ...], torch.zeros_like(this_inputs[:,2:3,...]), this_inputs[:, 3:, ...]], dim=1)\n",
+    "        \n",
+    "        mri_array = this_outputs[0].detach().permute(1, 2, 3, 0).cpu().numpy()\n",
+    "        nifti_img = nib.Nifti1Image(mri_array,affine=np.eye(4))\n",
+    "        output_filename = os.path.join(save_dir, f'BRATS_{this_ids[0]:03d}.nii.gz')\n",
+    "        print(output_filename)\n",
+    "        nib.save(nifti_img, output_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raise KeyboardInterrupt"
    ]
   },
   {
@@ -70,21 +118,6 @@
     "device = torch.device(\"cuda:0\")\n",
     "out_channels = 1\n",
     "model = create_UNet3D(len(input_filter), out_channels, device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_dataset = BraTSDataset(\n",
-    "    version='2017',\n",
-    "    section='all',\n",
-    "    seed = RANDOM_SEED,\n",
-    "    transform = data_transform['val']\n",
-    ")\n",
-    "all_loader = DataLoader(all_dataset, batch_size=1, shuffle=False, num_workers=8)"
    ]
   },
   {
