--- a/src/main_tumseg.ipynb
+++ b/src/main_tumseg.ipynb
@@ -36,17 +36,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 1\n",
+    "RUN_ID = 802\n",
     "RANDOM_SEED = 0\n",
     "MAX_EPOCHS = 2000\n",
     "TRAIN_DATA_SIZE = None\n",
     "VAL_INTERVAL = 5\n",
     "BATCHSIZE_TRAIN = 2\n",
+    "DATA_TRANSFORM = \"NORM_INTENSITY\" # \"SCALE_INTENSITY\"\n",
     "ROOT_DIR = \"/scratch1/sachinsa/brats_seg\"\n",
-    "DATA_ROOT_DIR = \"/scratch1/sachinsa/data\"\n",
     "\n",
     "# test code sanity (for silly errors)\n",
-    "SANITY_CHECK = True\n",
+    "SANITY_CHECK = False\n",
     "if SANITY_CHECK:\n",
     "    RUN_ID = 0\n",
     "    MAX_EPOCHS = 2\n",
@@ -60,6 +60,7 @@
     "logger.info(f\"BATCHSIZE_TRAIN: {BATCHSIZE_TRAIN}\")\n",
     "logger.info(f\"VAL_INTERVAL: {VAL_INTERVAL}\")\n",
     "logger.info(f\"RANDOM_SEED: {RANDOM_SEED}\")\n",
+    "logger.info(f\"DATA_TRANSFORM: {DATA_TRANSFORM}\")\n",
     "logger.info(f\"ROOT_DIR: {ROOT_DIR}\")\n",
     "print(\"\")"
    ]
@@ -102,8 +103,10 @@
     "\n",
     "from utils.dataset import BraTSDataset\n",
     "from utils.model import create_SegResNet, inference\n",
-    "from utils.transforms import tumor_seg_transform_3 as data_transform\n",
-    "\n",
+    "if DATA_TRANSFORM == \"SCALE_INTENSITY\":\n",
+    "    from utils.transforms import tumor_seg_transform_scale as data_transform\n",
+    "else:\n",
+    "    from utils.transforms import tumor_seg_transform_default as data_transform\n",
     "from itertools import chain, combinations\n",
     "\n",
     "# print_config()"
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +167,6 @@
     "train_dataset = BraTSDataset(\n",
     "    version='2017',\n",
     "    section = 'training',\n",
-    "    load_t1gd = True,\n",
     "    seed = RANDOM_SEED,\n",
     "    transform = data_transform['train']\n",
     ")\n",
@@ -172,7 +174,6 @@
     "val_dataset = BraTSDataset(\n",
     "    version='2017',\n",
     "    section = 'validation',\n",
-    "    load_t1gd = True,\n",
     "    seed = RANDOM_SEED,\n",
     "    transform = data_transform['val']\n",
     ")\n",
