scaled intensity to 0-1

--- a/src/analyse_results_tumseg.ipynb
+++ b/src/analyse_results_tumseg.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 801\n",
+    "RUN_ID = 810\n",
     "T1GD_SYNTH = True\n",
     "MASK_CODE = 0\n",
     "if T1GD_SYNTH: MASK_CODE = 0\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,14 +148,14 @@
     "from monai.utils import set_determinism\n",
     "\n",
     "from tqdm import tqdm\n",
-    "from utils.transforms import tumor_seg_transform as data_transform\n",
+    "from utils.transforms import tumor_seg_transform_default as data_transform\n",
     "from utils.model import create_SegResNet, inference\n",
     "from utils.dataset import BraTSDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
