--- a/src/main_synth.ipynb
+++ b/src/main_synth.ipynb
@@ -48,18 +48,19 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "RUN_ID = 1\n",
-        "TRAIN_DATA_SIZE = 200\n",
+        "RUN_ID = 111\n",
+        "TRAIN_DATA_SIZE = None\n",
         "MAX_EPOCHS = 6000\n",
         "BATCHSIZE_TRAIN = 2\n",
         "VAL_INTERVAL = 10\n",
         "TRAIN_RATIO = 0.8\n",
         "RANDOM_SEED = 0\n",
         "CONTINUE_TRAINING = False\n",
+        "DATA_TRANSFORM = \"SCALE_INTENSITY\" # \"NORM_INTENSITY\" # \n",
         "ROOT_DIR = \"/scratch1/sachinsa/cont_syn\"\n",
         "\n",
         "# test code sanity (for silly errors)\n",
-        "SANITY_CHECK = True\n",
+        "SANITY_CHECK = False\n",
         "if SANITY_CHECK:\n",
         "    RUN_ID = 0\n",
         "    MAX_EPOCHS = 2\n",
@@ -75,6 +76,7 @@
         "logger.info(f\"TRAIN_RATIO: {TRAIN_RATIO}\")\n",
         "logger.info(f\"RANDOM_SEED: {RANDOM_SEED}\")\n",
         "logger.info(f\"CONTINUE_TRAINING: {CONTINUE_TRAINING}\")\n",
+        "logger.info(f\"DATA_TRANSFORM: {DATA_TRANSFORM}\")\n",
         "logger.info(f\"ROOT_DIR: {ROOT_DIR}\")\n",
         "print(\"\")"
       ]
@@ -118,9 +120,10 @@
         "\n",
         "from utils.dataset import BraTSDataset\n",
         "from utils.model import create_UNet3D, inference\n",
-        "from utils.transforms import contr_syn_transform_2  as data_transform\n",
-        "\n",
-        "# print_config()"
+        "if DATA_TRANSFORM == \"SCALE_INTENSITY\":\n",
+        "    from utils.transforms import contr_syn_transform_scale as data_transform\n",
+        "else:\n",
+        "    from utils.transforms import contr_syn_transform_default as data_transform"
       ]
     },
     {
@@ -199,7 +202,6 @@
         "\n",
         "BATCHSIZE_VAL = BATCHSIZE_TRAIN\n",
         "\n",
-        "# Create data loaders\n",
         "train_loader = DataLoader(train_dataset, batch_size=BATCHSIZE_TRAIN, shuffle=True,\n",
         "    num_workers=8)\n",
         "val_loader = DataLoader(val_dataset, batch_size=BATCHSIZE_VAL, shuffle=False, num_workers=8)\n",
@@ -238,14 +240,12 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "PeDy37CJdqCT"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "device = torch.device(\"cuda:0\")\n",
         "out_channels = 1\n",
-        "model = create_UNet3D(3, out_channels, device)\n",
+        "model = create_UNet3D(3, out_channels, device, data_transform=DATA_TRANSFORM)\n",
         "logger.debug(\"Model defined\")"
       ]
     },
@@ -349,9 +349,6 @@
         "        scaler.scale(loss).backward()\n",
         "        scaler.step(optimizer)\n",
         "        scaler.update()\n",
-        "        if np.isnan(loss.item()):\n",
-        "            logger.warning(\"nan value encountered!\")\n",
-        "            exit()\n",
         "        epoch_loss += loss.item()\n",
         "        logger.info(\n",
         "            f\"{step}/{len(train_loader)}\"\n",
