--- a/src/main_tumseg.ipynb
+++ b/src/main_tumseg.ipynb
@@ -36,13 +36,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 802\n",
+    "RUN_ID = 810\n",
     "RANDOM_SEED = 0\n",
     "MAX_EPOCHS = 2000\n",
     "TRAIN_DATA_SIZE = None\n",
     "VAL_INTERVAL = 5\n",
     "BATCHSIZE_TRAIN = 2\n",
-    "DATA_TRANSFORM = \"NORM_INTENSITY\" # \"SCALE_INTENSITY\"\n",
+    "DATA_TRANSFORM = \"SCALE_INTENSITY\" # \"NORM_INTENSITY\" # \n",
+    "SYNTH_DATA = True # whether to use synthetic data\n",
     "ROOT_DIR = \"/scratch1/sachinsa/brats_seg\"\n",
     "\n",
     "# test code sanity (for silly errors)\n",
@@ -61,6 +62,7 @@
     "logger.info(f\"VAL_INTERVAL: {VAL_INTERVAL}\")\n",
     "logger.info(f\"RANDOM_SEED: {RANDOM_SEED}\")\n",
     "logger.info(f\"DATA_TRANSFORM: {DATA_TRANSFORM}\")\n",
+    "logger.info(f\"SYNTH_DATA: {SYNTH_DATA}\")\n",
     "logger.info(f\"ROOT_DIR: {ROOT_DIR}\")\n",
     "print(\"\")"
    ]
@@ -168,6 +170,7 @@
     "    version='2017',\n",
     "    section = 'training',\n",
     "    seed = RANDOM_SEED,\n",
+    "    synth = SYNTH_DATA,\n",
     "    transform = data_transform['train']\n",
     ")\n",
     "\n",
@@ -175,6 +178,7 @@
     "    version='2017',\n",
     "    section = 'validation',\n",
     "    seed = RANDOM_SEED,\n",
+    "    synth = SYNTH_DATA,\n",
     "    transform = data_transform['val']\n",
     ")\n",
     "\n",
