--- a/src/save_results.ipynb
+++ b/src/save_results.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 401\n",
+    "RUN_ID = 111\n",
     "RANDOM_SEED = 0\n",
     "ROOT_DIR = \"/scratch1/sachinsa/cont_syn\""
    ]
@@ -36,7 +36,7 @@
     "import nibabel as nib\n",
     "\n",
     "from utils.model import create_UNet3D, inference\n",
-    "from utils.transforms import contr_syn_transform_2 as data_transform\n",
+    "from utils.transforms import contr_syn_transform_scale as data_transform\n",
     "from utils.dataset import BraTSDataset\n",
     "\n",
     "logger = Logger(log_level='DEBUG')"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,40 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# temp code: to save blank t1gd\n",
-    "device = torch.device(\"cuda:0\")\n",
-    "\n",
-    "with torch.no_grad():\n",
-    "    for this_data in all_loader:\n",
-    "        this_inputs, this_ids = (\n",
-    "            this_data[\"image\"].to(device),\n",
-    "            this_data[\"id\"],\n",
-    "        )\n",
-    "        this_outputs = torch.cat([this_inputs[:, :2, ...], torch.zeros_like(this_inputs[:,2:3,...]), this_inputs[:, 3:, ...]], dim=1)\n",
-    "        \n",
-    "        mri_array = this_outputs[0].detach().permute(1, 2, 3, 0).cpu().numpy()\n",
-    "        nifti_img = nib.Nifti1Image(mri_array,affine=np.eye(4))\n",
-    "        output_filename = os.path.join(save_dir, f'BRATS_{this_ids[0]:03d}.nii.gz')\n",
-    "        print(output_filename)\n",
-    "        nib.save(nifti_img, output_filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raise KeyboardInterrupt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
